Prevent horizontal scrolling in examples

--- a/src/demo/components/ExampleCard/ExampleCard.scss
+++ b/src/demo/components/ExampleCard/ExampleCard.scss
@@ -68,7 +68,8 @@
 
 .ExampleCard-example {
   max-height: 80vh;
-  overflow: auto;
+  overflow-x: hidden;
+  overflow-y: auto;
   padding: 20px 0;
   -webkit-overflow-scrolling: touch;
 }
